Fix bug where the form overlaps the privacy checkbox. Fix bug where the menu overlaps the page title on small mobile phones.

--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -92,6 +92,7 @@ html.nav-open {
 .widget[data-widget-type="extendednavigation"] {
 	@media @tablet {
 		position: relative;
+		z-index: 2;
 	}
 }
 
